automatically backed up by learn

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,9 +1,7 @@
 <%= form_for @post do |f| %>
   <%= f.label 'Post Title' %><br>
-  <%= f.text_field :title %><br>
-
+  <%= text_field_tag :title %><br>
   <%= f.label 'Post Description' %><br>
-  <%= f.text_area :description %><br>
-
+  <%= text_area_tag :description %><br>
   <%= f.submit "Submit Post" %>
 <% end %>
